# datapar_oauth

./: README.md
bidesigner/: =65.9.0  Dockerfile  docker-compose.yml  manage.py  pyproject.toml
bidesigner/bidesigner/: asgi.py  settings.py  urls.py  views.py  wsgi.py
